--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'dagger.hilt.android.plugin'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -51,7 +55,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
-    implementation "androidx.compose.ui:ui:1.2.1"
+    implementation 'androidx.compose.ui:ui:1.3.0-beta03'
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.compose.material3:material3:1.0.0-beta03'
     testImplementation 'junit:junit:4.13.2'
@@ -60,4 +64,62 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+
+    //Third-Party Libraries
+    //Room Persistence Library
+    def room_version = '2.4.3'
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // Retrofit & OkHttp
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    kapt 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.9'
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9'
+    //Live Data and other ends
+
+    //RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+    //Dagger - Hilt
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    kapt 'com.google.dagger:hilt-compiler:2.44'
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    //Constrains
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    //collapsing toolbar
+    implementation 'me.onebone:toolbar-compose:2.3.4'
+    // android ktx
+    implementation 'androidx.activity:activity-ktx:1.6.0'
+    implementation "com.google.accompanist:accompanist-pager:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-pager-indicators:$accompanist_version"
+    // Jetpack Compose Integration
+    def nav_version = '2.5.2'
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    //Lotte Animation
+    implementation "com.airbnb.android:lottie-compose:$lottieVersion"
+    //Permission
+    implementation "com.google.accompanist:accompanist-permissions:0.19.0"
+    //Flow Layout
+    implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
+    //LiveData as state
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.room:room-ktx:2.4.3'
+    //Coil image dependency for image loading on background thread
+    implementation('io.coil-kt:coil-compose:2.2.1')
+    //More Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    //SDP Compose
+    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+
 }
