--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,15 @@
 buildscript {
     ext {
         compose_version = '1.2.1'
+        accompanist_version = '0.24.12-rc'
+        lottieVersion = '5.2.0'
+        accompanist_version = '0.26.4-beta'
     }
+
+    dependencies {
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.41'
+    }
+
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.3.0' apply false
