--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.HIDE_OVERLAY_WINDOWS" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -14,7 +16,7 @@
         android:theme="@style/Theme.LinkedMewithMaterial3"
         tools:targetApi="31">
         <activity
-            android:name=".presentation.LandingActivity"
+            android:name=".presentation.landing.LandingActivity"
             android:exported="true"
             android:theme="@style/Theme.LinkedMewithMaterial3">
             <intent-filter>
