--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,12 +88,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     //Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.44'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44'
-    kapt 'com.google.dagger:hilt-compiler:2.44'
+    implementation "com.google.dagger:hilt-android:2.38.1"
+    kapt "com.google.dagger:hilt-android-compiler:2.37"
+    kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0"
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0-alpha03'
+
     //Constrains
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     //collapsing toolbar
@@ -121,5 +122,8 @@ dependencies {
     //SDP Compose
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
 
+
+    //Google Login
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
 }
